<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewSubscriptionActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorAccent"
        tools:srcCompat="@tools:sample/avatars[1]" />

    <Button
        android:id="@+id/add_subscription_button"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_subscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/costInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="128dp"
        app:boxBackgroundMode="outline"
        app:boxCollapsedPaddingTop="?attr/dialogCornerRadius"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/cost_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sub_cost"
            android:inputType="number|numberDecimal"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/costInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/subNameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            app:boxBackgroundMode="outline"
            app:boxCollapsedPaddingTop="?attr/dialogCornerRadius"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sub_name"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/subDateInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            app:boxBackgroundMode="outline"
            app:boxCollapsedPaddingTop="?attr/dialogCornerRadius"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/date_edit"
                android:editable="false"
                android:focusable="false"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sub_first_payment"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>